fixes nav line break on iphone 6 size displays

--- a/Hansen/Content/styles/hansen.css
+++ b/Hansen/Content/styles/hansen.css
@@ -103,6 +103,8 @@
 	top: 5px;
 }
 
+.magellan-container .sub-nav dd { margin-left: 0; }
+
 .magellan-container .sub-nav dt a, .sub-nav dd a {
     color: #eee;
     font-weight: bold;
